# tree-owners

./: Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml  test.yml
src/: cli.rs  id.rs  main.rs  name.rs  output.rs  summary.rs
