[package]
name = "tree-owners"
version = "1.0.5"
edition = "2021"

authors = ["Adrian Wannenmacher <tfld@tfld.dev>"]
license = "EUPL-1.2"
repository = "https://github.com/TeFiLeDo/tree-owners"

description = "Find all owners (user and group) inside a directory tree."
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "linux", "file"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive", "cargo", "wrap_help"] }
file-owner = "0.1.2"
human-panic = "1.2.3"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"

[build-dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive", "cargo", "wrap_help"] }
clap_complete = "4.5.2"
